demo-httpd/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-httpd
  name: demo-httpd
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: demo-httpd
