demo-httpd/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: demo-httpd
  name: demo-httpd
  annotations:
    argocd.argoproj.io/sync-wave: "10"  
spec:
  port:
    targetPort: 80
  to:
    kind: Service
    name: demo-httpd
    weight: 100
  wildcardPolicy: None
